fix spinner vertical alignment

--- a/src/react/components/pages/projectSettings/projectSettingsPage.scss
+++ b/src/react/components/pages/projectSettings/projectSettingsPage.scss
@@ -18,10 +18,10 @@
       max-width: 50%;
 
     .loading {
-      margin-top: calc(50% + 6rem);
+      margin-top: calc(50vh - 10rem);
         .ms-Spinner-circle{
-            height: 12rem;
-            width: 12rem;
+            height: 8rem;
+            width: 8rem;
         }
     }
 
